# kube-image-inventory

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: background.py  cluster_config.py  config.py  db.py  inventory.py  k8s_client.py  main.py  models.py  registry.py  schemas.py  trivy.py
app/services/: cluster_status.py  image_drift.py
app/static/: styles.css
app/templates/: base.html  index.html
config/: clusters.example.yaml
deploy/kubernetes/base/: deployment.yaml
examples/multicluster/: clusters.yaml  create-clusters.sh  delete-clusters.sh  dev-workload.yaml  prod-workload.yaml
tests/: conftest.py  test_background.py  test_cluster_config.py  test_cluster_isolation.py  test_cluster_status.py  test_image_drift.py  test_inventory.py  test_k8s_client.py  test_registry.py  test_trivy.py  test_ui.py
