[project]
name = "kube-image-inventory"
version = "0.1.0"
description = "Read-only web UI for listing container images running in a Kubernetes cluster."
authors = [{ name = "Kubernetes Image Inventory Contributors" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "sqlalchemy",
    "kubernetes",
    "httpx",
    "python-multipart",
    "pydantic-settings",
    "apscheduler",
    "packaging",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
